// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Default 1`] = `
.c4 {
  padding: 48px 48px 48px 48px;
}

.c5 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  margin: 0px 0px 0px 0px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  margin: 0px 0px 0px 0px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c0 {
  border: 1px dashed #aaa;
  height: 90vh;
}

.c3 {
  background: #eee;
  border: 1px dashed #aaa;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            1
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            2
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            3
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            4
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            5
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Box 
            6
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BreakpointProvider Default 1`] = `
.c1 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  background: #eee;
  padding: 24px;
}

<div>
  <div
    className="c0"
  >
    <p
      className="c1"
    >
      Current breakpoint is 
      large
    </p>
  </div>
</div>
`;

exports[`Storyshots Button Destructive 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 0;
  border-width: 1px;
  font-weight: 400;
  border-style: solid;
  background-color: #ed2157;
  border-color: #ed2157;
  color: #fff;
}

.c0:hover {
  background-color: #ed2157;
  border-color: #ed2157;
  color: #fff;
}

.c0:focus {
  background-color: #ed2157;
  border-color: #ed2157;
  color: #fff;
}

.c0:active {
  background-color: #ed2157;
  border-color: #ed2157;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  content: '';
  opacity: 0;
  -webkit-transition: opacity .3s;
  transition: opacity .3s;
  background: repeating-linear-gradient( -45deg, #edeff2, #edeff2 20px, #dbdfe6 20px, #dbdfe6 40px );
}

.c0:disabled {
  background: #edeff2;
  border: 1px solid transparent;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c0:disabled::before {
  opacity: 1;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 0;
  border-width: 1px;
  font-weight: 400;
  border-style: solid;
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:focus {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:active {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  content: '';
  opacity: 0;
  -webkit-transition: opacity .3s;
  transition: opacity .3s;
  background: repeating-linear-gradient( -45deg, #edeff2, #edeff2 20px, #dbdfe6 20px, #dbdfe6 40px );
}

.c0:disabled {
  background: #edeff2;
  border: 1px solid transparent;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c0:disabled::before {
  opacity: 1;
}

<button
  className="c0"
  disabled={true}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me if you can!"
  type="button"
>
  Click me if you can!
</button>
`;

exports[`Storyshots Button Primary 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 0;
  border-width: 1px;
  font-weight: 400;
  border-style: solid;
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:focus {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:active {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  content: '';
  opacity: 0;
  -webkit-transition: opacity .3s;
  transition: opacity .3s;
  background: repeating-linear-gradient( -45deg, #edeff2, #edeff2 20px, #dbdfe6 20px, #dbdfe6 40px );
}

.c0:disabled {
  background: #edeff2;
  border: 1px solid transparent;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c0:disabled::before {
  opacity: 1;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 0;
  border-width: 1px;
  font-weight: 400;
  border-style: solid;
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c0:hover {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c0:focus {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c0:active {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  content: '';
  opacity: 0;
  -webkit-transition: opacity .3s;
  transition: opacity .3s;
  background: repeating-linear-gradient( -45deg, #edeff2, #edeff2 20px, #dbdfe6 20px, #dbdfe6 40px );
}

.c0:disabled {
  background: #edeff2;
  border: 1px solid transparent;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c0:disabled::before {
  opacity: 1;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Warning 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 0;
  border-width: 1px;
  font-weight: 400;
  border-style: solid;
  background-color: #fcc200;
  border-color: #fcc200;
  color: #fff;
}

.c0:hover {
  background-color: #fcc200;
  border-color: #fcc200;
  color: #fff;
}

.c0:focus {
  background-color: #fcc200;
  border-color: #fcc200;
  color: #fff;
}

.c0:active {
  background-color: #fcc200;
  border-color: #fcc200;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  content: '';
  opacity: 0;
  -webkit-transition: opacity .3s;
  transition: opacity .3s;
  background: repeating-linear-gradient( -45deg, #edeff2, #edeff2 20px, #dbdfe6 20px, #dbdfe6 40px );
}

.c0:disabled {
  background: #edeff2;
  border: 1px solid transparent;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c0:disabled::before {
  opacity: 1;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button With a link 1`] = `
.c0 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 0;
  border-width: 1px;
  font-weight: 400;
  border-style: solid;
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:focus {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:active {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  content: '';
  opacity: 0;
  -webkit-transition: opacity .3s;
  transition: opacity .3s;
  background: repeating-linear-gradient( -45deg, #edeff2, #edeff2 20px, #dbdfe6 20px, #dbdfe6 40px );
}

.c0:disabled {
  background: #edeff2;
  border: 1px solid transparent;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c0:disabled::before {
  opacity: 1;
}

<a
  className="c0"
  disabled={undefined}
  href="http://www.google.nl"
  onClick={[Function]}
  target="_blank"
  title="Click me!"
  type={undefined}
>
  Click me
</a>
`;

exports[`Storyshots ErrorBoundary Default 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div>
  <p
    className="c0"
  >
    This does not have an error.
  </p>
</div>
`;

exports[`Storyshots FlatButton Default 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: none;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background: transparent;
  border-radius: 0;
  border: solid 1px transparent;
  color: #21252b;
}

.c0:hover {
  background-color: transparent;
  border-color: #d2d7e0;
  color: #21252b;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:focus {
  background-color: transparent;
  border-color: #d2d7e0;
  color: #21252b;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  background-color: transparent;
  border-color: #d2d7e0;
  color: #21252b;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

<button
  className="c0"
  disabled={false}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots FoldOut With a toggle 1`] = `
.c1 {
  padding: 0px 0px 12px 0px;
}

.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c3 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  transition: transform .1s,background .3s,color .3s,box-shadow .1s,border .3s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  border-radius: 0;
  border-width: 1px;
  font-weight: 400;
  border-style: solid;
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c3:hover {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c3:focus {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c3:active {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c3:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c3:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c3:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c3::before {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  content: '';
  opacity: 0;
  -webkit-transition: opacity .3s;
  transition: opacity .3s;
  background: repeating-linear-gradient( -45deg, #edeff2, #edeff2 20px, #dbdfe6 20px, #dbdfe6 40px );
}

.c3:disabled {
  background: #edeff2;
  border: 1px solid transparent;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c3:disabled::before {
  opacity: 1;
}

.c0 {
  -webkit-transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  overflow: hidden;
  height: 0;
}

<div>
  <div
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        <p
          className="c2"
        >
          
    Now this is the story all about how
    My life got flipped, turned upside down
    And I'd like to take a minute just sit right there
    I'll tell you how I became the prince of a town called Bel-air

    In west Philadelphia born and raised
    On the playground where I spent most of my days
    Chilling out, maxing, relaxing all cool
    And all shooting some b-ball outside of the school
    When a couple of guys, they were up to no good
    Started making trouble in my neighbourhood
    I got in one little fight and my mom got scared
    And said "You're moving with your auntie and uncle in Bel-air"

    I whistled for a cab and when it came near the
    License plate said "fresh" and had a dice in the mirror
    If anything I could say that this cab was rare
    But I thought nah, forget it, yo homes to Bel-air!

    I pulled up to a house about seven or eight
    And I yelled to the cabby "Yo, homes smell you later!"
    Looked at my kingdom I was finally there
    To sit on my throne as the prince of Bel-air

        </p>
      </div>
    </div>
  </div>
  <button
    className="c3"
    disabled={undefined}
    href={undefined}
    onClick={[Function]}
    target={undefined}
    title="open FoldOut"
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`Storyshots Heading Default 1`] = `
.c0 {
  color: #333740;
  font-family: Melbourne,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div
  className="c0"
  role="heading"
>
  This is a div element.
</div>
`;

exports[`Storyshots Heading With a hierarchy 1`] = `
.c0 {
  color: #333740;
  font-family: Melbourne,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<h1
  className="c0"
  role="heading"
>
  This is an h
  1
   element.
</h1>
`;

exports[`Storyshots Icon Large icon 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon Small icon 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon With overwritten fill 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: BlueViolet;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon With some text 1`] = `
.c1 {
  margin: 12px 0px 0px 0px;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<div>
  <span
    aria-hidden={true}
    className="c0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
    role="img"
  />
  <span>
     With some text
  </span>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
    <span>
       With some other text
    </span>
  </div>
</div>
`;

exports[`Storyshots Notification Error 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #ffbdce;
  border-color: #ff6c93;
  color: #c81746;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Oops, something wen't wrong. Please try again.
  </div>
</div>
`;

exports[`Storyshots Notification Info 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #dde7f2;
  border-color: #c8d2dd;
  color: #4e82bb;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Oops, something wen't wrong. Please try again.
  </div>
</div>
`;

exports[`Storyshots Notification Success 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #d2f5d6;
  border-color: #6bde78;
  color: #31953d;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Wow, Great job!
  </div>
</div>
`;

exports[`Storyshots Notification Warning 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #fff0be;
  border-color: #ffce28;
  color: #bb8d0a;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Careful, this might go wrong.
  </div>
</div>
`;

exports[`Storyshots Notification With a custom icon 1`] = `
.c1 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c0 {
  border-width: 1px;
  border-style: solid;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  background-color: #fff0be;
  border-color: #ffce28;
  color: #bb8d0a;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Meh, I am not impressed.
  </div>
</div>
`;

exports[`Storyshots PriceTag Default 1`] = `
.c0 {
  position: relative;
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 28px;
  font-weight: 400;
}

.c0 sup {
  font-size: .7em;
  font-weight: 400;
}

<span
  className="c0"
>
  €
   
  12
  ,
  00
</span>
`;

exports[`Storyshots Spacer With margin 1`] = `
.c0 {
  margin: 12px 12px 12px 12px;
}

.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c1 {
  border: solid 3px rgba(255,36,94,0.3);
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer With padding 1`] = `
.c1 {
  padding: 12px 12px 12px 12px;
}

.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  border: solid 3px rgba(255,36,94,0.3);
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      This has padding.
    </p>
  </div>
</div>
`;

exports[`Storyshots SubHeading Default 1`] = `
.c0 {
  color: #88979d;
  font-family: Source Sans Pro,sans-serif;
  font-size: 22px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div
  className="c0"
  role="heading"
>
  This is a div element.
</div>
`;

exports[`Storyshots SubHeading With a hierarchy 1`] = `
.c0 {
  color: #88979d;
  font-family: Source Sans Pro,sans-serif;
  font-size: 22px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<h2
  className="c0"
  role="heading"
>
  This is an h
  2
   element.
</h2>
`;

exports[`Storyshots Text Default 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<p
  className="c0"
>
  
    Now this is the story all about how
    My life got flipped, turned upside down
    And I'd like to take a minute just sit right there
    I'll tell you how I became the prince of a town called Bel-air

    In west Philadelphia born and raised
    On the playground where I spent most of my days
    Chilling out, maxing, relaxing all cool
    And all shooting some b-ball outside of the school
    When a couple of guys, they were up to no good
    Started making trouble in my neighbourhood
    I got in one little fight and my mom got scared
    And said "You're moving with your auntie and uncle in Bel-air"

    I whistled for a cab and when it came near the
    License plate said "fresh" and had a dice in the mirror
    If anything I could say that this cab was rare
    But I thought nah, forget it, yo homes to Bel-air!

    I pulled up to a house about seven or eight
    And I yelled to the cabby "Yo, homes smell you later!"
    Looked at my kingdom I was finally there
    To sit on my throne as the prince of Bel-air

</p>
`;
